Reworking get players api implementation
