# src/repository-api-abstractions/Interfaces/IPlayersApi.cs
@@ -9,10 +9,10 @@ namespace XtremeIdiots.Portal.RepositoryApi.Abstractions.Interfaces
     {
         Task<ApiResponseDto<PlayerDto>> GetPlayer(Guid playerId);
         Task<ApiResponseDto<PlayerDto>> GetPlayerByGameType(GameType gameType, string guid);
+        Task<ApiResponseDto<PlayersCollectionDto>> GetPlayers(GameType? gameType, PlayersFilter? filter, string? filterString, int skipEntries, int takeEntries, PlayersOrder? order);
         Task<ApiResponseDto> CreatePlayer(CreatePlayerDto createPlayerDto);
         Task<ApiResponseDto> CreatePlayers(List<CreatePlayerDto> createPlayerDtos);
         Task<ApiResponseDto> UpdatePlayer(EditPlayerDto editPlayerDto);
-        Task<PlayersSearchResponseDto?> SearchPlayers(string gameType, string filter, string filterString, int takeEntries, int skipEntries, string? order);
         Task<List<AdminActionDto>?> GetAdminActionsForPlayer(Guid playerId);
         Task<AdminActionDto?> CreateAdminActionForPlayer(AdminActionDto adminAction);
         Task<AdminActionDto?> UpdateAdminActionForPlayer(AdminActionDto adminAction);
